--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -21,14 +21,45 @@ th {
 }
 
 button {
-    margin-top: 10px;
-    padding: 10px 15px;
-    background-color: #4CAF50;
-    color: white;
+    padding: 5px 10px;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
+    margin-right: 5px;
 }
 
-button:hover {
-    background-color: #45a049;
+.borrow-button {
+    background-color: #4CAF50;
+    color: white;
 }
+
+.cancel-button {
+    background-color: #cccccc;
+    color: black;
+}
+
+/*button {*/
+/*    margin-top: 10px;*/
+/*    padding: 10px 15px;*/
+/*    background-color: #4CAF50;*/
+/*    color: white;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*button:hover {*/
+/*    background-color: #45a049;*/
+/*}*/
+
+/*cancelButton {*/
+/*    margin-top: 10px;*/
+/*    padding: 10px 15px;*/
+/*    background-color: #ef071a;*/
+/*    color: white;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*cancelButton:hover {*/
+/*    background-color: #7a0315;*/
+/*}*/
